--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>google-clone</name>
 	<description>Google Clone for Kobi</description>
-<!--	<properties>-->
-<!--		<java.version>11</java.version>-->
-<!--	</properties>-->
+	<properties>
+		<java.version>11</java.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
